--- a/08 flask/notas/templates/editar.html
+++ b/08 flask/notas/templates/editar.html
@@ -8,12 +8,12 @@
             <a href="{{ url_for('index')}}">Listar estudiantes</a>
             <a href="{{ url_for('nuevo')}}">agregar estudiante</a>
         </nav>
-        <h1>Nuevo Estudiante</h1>
+        <h1>Editar Estudiante</h1>
         <form action="{{ request.path }}" method="post">
             <input type="hidden" name="id" value="{{ e.id }}">
             <label for="nombre">Nombre</label>
             <input type="text" name="nombre" placeholder="Ingrese nombre" value="{{ e.nombre }}">
-            <label for="apellido">apellido</label>
+            <label for="apellido">Apellido</label>
             <input type="text" name="apellido" placeholder="Ingrese apellido" value="{{ e.apellido }}">
             <label for="codigo">Código</label>
             <input type="text" name="codigo" placeholder="Ingrese codigo" value="{{ e.codigo }}">
