terminado el ejemplo de notas

--- a/08 flask/notas/templates/agregar_nota.html
+++ b/08 flask/notas/templates/agregar_nota.html
@@ -9,17 +9,11 @@
             <a href="{{ url_for('index')}}">Listar estudiantes</a>
             <a href="{{ url_for('nuevo')}}">agregar estudiante</a>
         </nav>
-        <h1>Eliminar Estudiante</h1>
-        <section id="alerta">
-            <h2>Esta seguro que desea eliminar al estudiante:</h2>
-            <b>Nombre: </b> {{ e.nombre }}<br>
-            <b>Apellido:</b> {{ e.apellido }}<br>
-            <b>Código:</b> {{ e.codigo }}<br>
-            <b>Correo:</b> {{ e.correo }}<br>
-        </section>
-
+        <h1>Agregar Nota</h1>
         <form action="{{ request.path }}" method="post">
-            <input type="hidden" name="id" value="{{ e.id }}">
+            <input type="hidden" name="id" value="{{ id }}">
+            <label for="nota">Nota</label>
+            <input type="number" name="nota" placeholder="Ingrese nota">
             <input type="submit" value="Aceptar">
         </form>
         
