--- a/08 flask/notas/templates/ver_notas.html
+++ b/08 flask/notas/templates/ver_notas.html
@@ -9,19 +9,23 @@
             <a href="{{ url_for('index')}}">Listar estudiantes</a>
             <a href="{{ url_for('nuevo')}}">agregar estudiante</a>
         </nav>
-        <h1>Eliminar Estudiante</h1>
-        <section id="alerta">
-            <h2>Esta seguro que desea eliminar al estudiante:</h2>
+        <h1>Ver Notas Estudiante</h1>
+        <section>
             <b>Nombre: </b> {{ e.nombre }}<br>
             <b>Apellido:</b> {{ e.apellido }}<br>
             <b>Código:</b> {{ e.codigo }}<br>
             <b>Correo:</b> {{ e.correo }}<br>
         </section>
 
-        <form action="{{ request.path }}" method="post">
-            <input type="hidden" name="id" value="{{ e.id }}">
-            <input type="submit" value="Aceptar">
-        </form>
+        <h2>Notas:</h2>
+        <table border='1'>
+            <tr>
+            {% for n in notas %}
+                <td>{{ n.valor }}</td>
+            {% endfor %}
+            <th>{{ definitiva }}</th>
+            </tr>
+        </table>
         
 
     </body>
