--- a/08 flask/notas/templates/editar.html
+++ b/08 flask/notas/templates/editar.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Estudiantes y notas</title>
+        <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='estilos/default.css')}}">
     </head>
     <body>
         <nav>
